Fix partner logos being invisible in Safari

--- a/ogo/static/css/ogo.less
+++ b/ogo/static/css/ogo.less
@@ -87,6 +87,7 @@ html.cms_toolbar-toolbar .navbar { top: 42px; }
 		height: 0;
 		padding-bottom: 50.00%; // relative to width of parent element
 		img {
+			position: absolute;
 			display: block;
 			max-width: 100%;
 			max-height: 100%;
